--- a/app/globals.css
+++ b/app/globals.css
@@ -269,3 +269,14 @@
 .w-md-editor-toolbar {
   padding: 10px !important;
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
